# webboard

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  WEBSOCKET.md  test_websocket_client.html  test_websocket_client.py
src/: config.rs  error.rs  main.rs
src/features/: mod.rs
src/features/auth/: domain.rs  handler.rs  middleware.rs  mod.rs  service.rs
src/features/health/: domain.rs  handler.rs  mod.rs
src/features/jsonrpc/: mod.rs
src/features/jsonrpc/application/: mod.rs  service.rs
src/features/jsonrpc/domain/: error_code.rs  message.rs  mod.rs
src/features/jsonrpc/presentation/: handler.rs  mod.rs
src/features/users/: domain.rs  handler.rs  mod.rs  service.rs
src/handlers/: mod.rs  websocket.rs
src/infrastructure/: config.rs  error.rs  mod.rs
src/models/: jsonrpc.rs  mod.rs
src/services/: jsonrpc_service.rs  mod.rs
