[package]
name = "webboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Async utilities
futures = "0.3"

# Date/time utilities
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"
